[package]
name = "tls-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23.17", default-features = false, features = ["std"] }
tokio-rustls = "0.26.0"
webpki-roots = "0.26"
clap = { version = "4.5.23", features = ["derive"] }
