[package]
name = "tls-bench"
version = "0.1.0"
edition = "2021"
description = "A TLS benchmarking tool for evaluating servers TLS handshake performance"
authors = ["Hrvoje <hmilkovi@gmail.com>"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23.17", default-features = false, features = ["std"] }
tokio-rustls = "0.26.0"
webpki-roots = "0.26"
clap = { version = "4.5.23", features = ["derive"] }
indicatif = "0.17.9"
comfy-table = "7.1.3"
tokio-util = "0.7.13"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
